--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -23,15 +23,15 @@
 
 	<div class="span4">
 		<h1>Trust<br />Excellence<br />Partnership</h1>
-		<h3>Why Wieser Brothers</h3>
+		<h3><i class="icon-chevron-right"></i> Why Wieser Brothers</h3>
 	</div>
 	<div class="span4">
 		<%= image_tag "bucket2.png" %>
-		<h3>Our Latest Projects</h3>
+		<h3><i class="icon-chevron-right"></i> Our Latest Projects</h3>
 	</div>
 	<div class="span4">
 		<%= image_tag "bucket3.png" %>
-		<h3>Green Technologies</h3>
+		<h3><i class="icon-chevron-right"></i> Green Technologies</h3>
 	</div>
 </div>
 
