--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,10 @@
 
     <div class="container" >
       <footer>
-        <!-- img src="assets/footer-bg.gif" style="" / -->
         
-        <div class="row-fluid" style="min-height:400px;">
-          <div class="span4">Email</div>
+        
+        <div class="row-fluid" style="min-height:250px;">
+          <div class="span4"></div>
           <div class="span2">
             <ul>
               <li>Why Wieser Brothers</li>
