--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,11 +37,22 @@
         
         
         <div class="row-fluid" style="min-height:250px;">
-          <div class="span4"></div>
+          <div class="span4" id="email-sign-up">
+            <form>
+              <fieldset>
+                <legend>Receive our newsletter</legend>
+                <label>Your email address</label>
+                <input type="text" placeholder="Your email address">
+                <span class="help-block">Read the latest news from Wieser Brothers.</span>
+                <button type="submit" class="btn">Submit</button>
+              </fieldset>
+            </form>
+          </div>
           <div class="span2">
             <ul>
               <li>Why Wieser Brothers</li>
               <li>Trust</li>
+              <li>Excellence</li>
               <li>Partnership</li>
             </ul>
           </div>
