--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -50,8 +50,8 @@ $light_gray:#efefef;
 }
 
 footer {
-	margin-top:30px;
-	padding:20px;
+	margin-top:10px;
+	padding-top:40px;
 	position:relative;
 	color:#fff;
 	background-image:url('footer-bg2.gif');
