--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -14,11 +14,18 @@
 
 
 <div class="row-fluid">
-	
-<div style="height:325px;margin-bottom:20px;"></div>
+	<div  class="row" style="height:342px;padding:0px 20px;">
+		
+		<div class="span4 offset8" id="quotebox" style="">
+			<p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction ad know we are getting hones answers and ideas that are in the best interst of our company.</p>
+			<p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
+		</div>
+
+	</div>
 </div>
 
 <div class="row-fluid home-buckets">
+
 	<div class="span12" style="padding:20px;">
 
 	<div class="span4">
