--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,5 +1,12 @@
 
+
+
 <div class="row-fluid" style="">
+
+
+
+
+<!--
 <style type="text/css">
     body {
       background:url('assets/placeholder-hero.jpg') no-repeat center 0;
@@ -10,11 +17,13 @@
 
 }
 </style>
+-->
 
 
 
+<!-- 
 <div class="row-fluid">
-	<div  class="row" style="height:344px;padding:0px 20px;">
+	<div  class="row" style="height:344px;padding:0px 20px;position:relative;border:1px solid blue;">
 		
 		<div class="span4 offset8" id="quotebox" style="">
 			<p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction ad know we are getting hones answers and ideas that are in the best interst of our company.</p>
@@ -23,11 +32,12 @@
 
 	</div>
 </div>
+-->
 
-<div class="row-fluid home-buckets">
 
+
+<div class="row-fluid home-buckets" style="margin-top:-100px;position:relative;">
 	<div class="span12" style="padding:20px;">
-
 	<div class="span4">
 		<h1>Trust<br />Excellence<br />Partnership</h1>
 		<h3><i class="icon-chevron-right"></i> Why Wieser Brothers</h3>
@@ -42,6 +52,9 @@
 	</div>
 </div>
 
+
+
 </div>
 <%#= render '/refinery/content_page' %>
+
 </div>
