--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,7 +23,7 @@ $slate_blue:#4b7da4;
 $white:#ffffff;
 $light_gray:#efefef;
 
- html, body {margin:0;padding:0;background-color:#cdcdcd;}
+ html, body {margin:0;padding:0;background-color:$light_gray;}
 
  #home div > div[id] > div {width:940px;border:1px solid black;margin:0 auto;}
  #intro {position:relative;z-index:0;}
