started l2 showpage template

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,6 +68,10 @@ $light_gray:#efefef;
 	}
 }
 
+#l2-main {
+	min-height:500px;
+}
+
 .home-buckets {
 	background-color:$white;
 	border-radius:5px;
