--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,10 +15,11 @@
               <%= render '/refinery/header' -%>
             </header>
           </div><!-- top container -->
-          
+          <% if @page.home? %>
           <div class="container" style="position:relative;z-index:20;top:0;left:0;">
             <div class="row-fluid">
               <div class="span4 offset8" id="quotebox" >
+
                 <p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction ad know we are getting hones answers and ideas that are in the best interst of our company.</p>
                 <p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
               </div>
@@ -27,7 +28,7 @@
           
           <%= image_tag 'placeholder-hero.jpg', style: 'width:100%;margin-top:-363px;' %>
 
-
+          <% end %>
 
         </div>
 
