--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,3 +1,4 @@
-
-<%= render '/refinery/content_page' %>
-<div class="row-fluid" style="background-color:blue;">adsfas</div>
+<div class="row-fluid">
+<div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
+<div class="span4">Sidebar<%#= render '/refinery/content_page' %></div>
+</div>
