--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
             <div class="row-fluid">
               <div class="span4 offset8" id="quotebox" >
 
-                <p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction ad know we are getting hones answers and ideas that are in the best interst of our company.</p>
+                <p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction and know we are getting honest answers and ideas that are in the best interest of our company.</p>
                 <p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
               </div>
             </div>
