--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -16,7 +16,7 @@
         <span class="icon-bar"></span>
       </a>
 
-  		<a class="brand" href="#">
+  		<a class="brand" href="/">
   			<%= image_tag "logo-200.png" %>
   		</a>
 
