--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,8 +25,18 @@ $light_gray:#efefef;
 
  html, body {margin:0;padding:0;background-color:$light_gray;}
 
- #home div > div[id] > div {width:940px;border:1px solid black;margin:0 auto;}
- #intro {position:relative;z-index:0;}
+ //#home div > div[id] > div {width:940px;border:1px solid black;margin:0 auto;}
+ #intro {
+ 	position:relative;
+ 	z-index:0;
+ 	#big-image {
+ 		width:100%;
+ 		margin-top:-363px;
+ 		position:relative;
+ 		z-index:-2;
+ 	}
+ }
+ 
 
  footer {
  	background-color:$light_gray;
@@ -46,9 +56,26 @@ $light_gray:#efefef;
 	li {
 		list-style: none;
 		margin-left:none;
-
+	}
+	label {
+		display:none;
+	}
+	legend {
+		border-bottom:none;
 	}
  }
+
+ #myCarousel {width:100%;}
+
+.home-hero {
+	position:relative;
+	z-index:20;
+	top:0;
+	left:0;
+
+}
+
+
 
 #quotebox {
 	
@@ -129,9 +156,7 @@ footer {
 		border-bottom:none;
 
 	}
-	label {
-		display:none;
-	}
+	
 	
 
 }*/
