--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,40 +1,18 @@
-
-
+<% content_for :intro do %>
+<div id="intro">
+  <div class="container home-hero">
+    <div class="row-fluid">
+      <div class="span4 offset8" id="quotebox" >
+        <p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction and know we are getting honest answers and ideas that are in the best interest of our company.</p>
+        <p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
+      </div>
+    </div>
+  </div>
+  <%= image_tag 'temp_bg.jpg', id: 'big-image' %>
+</div>
+<% end %>
 
 <div class="row-fluid" style="">
-
-
-
-
-<!--
-<style type="text/css">
-    body {
-      background:url('assets/placeholder-hero.jpg') no-repeat center 0;
-      /*-webkit-background-size: contain;
-      -moz-background-size: contain;
-      -o-background-size: contain;*/
-      background-size: 1350px auto;
-
-}
-</style>
--->
-
-
-
-<!-- 
-<div class="row-fluid">
-	<div  class="row" style="height:344px;padding:0px 20px;position:relative;border:1px solid blue;">
-		
-		<div class="span4 offset8" id="quotebox" style="">
-			<p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction ad know we are getting hones answers and ideas that are in the best interst of our company.</p>
-			<p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
-		</div>
-
-	</div>
-</div>
--->
-
-
 
 <div class="row-fluid home-buckets" style="margin-top:-100px;position:relative;">
 	<div class="span12" style="padding:20px;">
@@ -51,8 +29,6 @@
 		<h3><i class="icon-chevron-right"></i> Green Technologies</h3>
 	</div>
 </div>
-
-
 
 </div>
 <%#= render '/refinery/content_page' %>
