--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -120,12 +120,22 @@ $light_gray:#efefef;
 		display:block;
 		height:130px;
 		margin:0;
-
-		
 	}
+
 	h3 {
 		font-weight:200;
 		color:$wieser_green;
+	}
+}
+
+#project-gallery {
+	margin:0;
+	padding:0;
+	li {
+		display:block;
+		float:left;
+		margin-right:10px;
+		margin-bottom:10px;
 	}
 }
 
