add blueimp litebox

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,7 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
+ *= require blueimp-gallery
  *=	require twitter-bootstrap-static/bootstrap
  *= require_tree .
 
