--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,13 +40,11 @@
         <footer>
         <div class="container">
         <div class="row-fluid" style="min-height:250px;">
-          <div class="span4" id="email-sign-up">
+          <div class="span4 form-horizontal" id="email-sign-up">
             <form>
               <fieldset>
-                <legend>Receive our newsletter</legend>
-                <label>Your email address</label>
-                <input type="text" placeholder="Your email address">
-                <span class="help-block">Read the latest news from Wieser Brothers.</span>
+                <label>Search</label>
+                <input type="text" placeholder="Search..." class="span9">
                 <button type="submit" class="btn">Submit</button>
               </fieldset>
             </form>
