--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -106,5 +106,17 @@
 
     </div>
     <%= render '/refinery/javascripts' %>
+    <script type="text/javascript">
+
+var $ = jQuery.noConflict();
+
+$(document).ready(function() {
+ $('#myCarousel').carousel({
+       interval: 4000,
+          cycle: true
+ });
+});
+
+</script>
   </body>
 </html>
