--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,15 +1,61 @@
 <% content_for :intro do %>
-<div id="intro">
-  <div class="container home-hero">
-    <div class="row-fluid">
-      <div class="span4 offset8" id="quotebox" >
-        <p>We had such a positive experience with Wieser Brothers that we now use them as our general contractor of choice. We ask questions during construction and know we are getting honest answers and ideas that are in the best interest of our company.</p>
-        <p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
-      </div>
+<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <% @projects_for_home.each_with_index do |p, index| %>
+    <li data-target="#myCarousel" data-slide-to="<%= index %>" class="<% if index == 0 %>active<% end %>"></li>
+    <% end %>
+  </ol> 
+
+<div class="carousel-inner">
+
+<% @projects_for_home.each_with_index do |p, index| %>
+<div class="<% if index == 0 %>active<% end %> item">
+  <div id="intro">
+    <div class="container home-hero">
+  		<div class="row-fluid">
+  			<div class="span4 offset8" id="quotebox" >
+    			<p><%= raw p.testimonial %></p>
+    			<%= p.title %>
+    			<p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
+  			</div>
+  		</div>
     </div>
+    <%= image_fu p.hero_image, nil, id: 'big-image' %>
   </div>
-  <%= image_tag 'temp_bg.jpg', id: 'big-image' %>
 </div>
+<% end %>
+
+
+</div>
+<!-- Carousel nav -->
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div> 
+<!--	
+<div id="myCarousel" class="carousel slide">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol> -->
+  <!-- Carousel items --> <!-- 
+  <div class="carousel-inner">
+    <div class="active item">…</div>
+    <div class="item">…</div>
+    <div class="item">…</div>
+  </div> -->
+  <!-- Carousel nav --> <!-- 
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+</div>
+
+-->
+	
+
+
+
+
+
 <% end %>
 
 <div class="row-fluid" style="">
