moved carousel indicatores

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,6 +71,7 @@ $light_gray:#efefef;
 
  #myCarousel {width:100%;}
  .carousel-inner {overflow:visible !important;}
+ .carousel-indicators {top:-118px !important;}
 
 .home-hero {
 	position:relative;
