--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -15,8 +15,8 @@
   		<div class="row-fluid">
   			<div class="span4 offset8" id="quotebox" >
     			<p><%= raw p.testimonial %></p>
-    			<%= p.title %>
-    			<p><strong>Doug Muller, Projects Manager<br />Organic Valley</strong></p>
+    			<h4><%= p.title %></h4>
+    			
   			</div>
   		</div>
     </div>
