--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,12 +1,12 @@
 <% content_for :intro do %>
 <div id="myCarousel" class="carousel slide">
-  <!--
+  
   <ol class="carousel-indicators">
-    <%# @projects_for_home.each_with_index do |p, index| %>
-    <li data-target="#myCarousel" data-slide-to="<%#= index %>" class="<%# if index == 0 %>active<%# end %>"></li>
-    <%# end %>
+    <% @projects_for_home.each_with_index do |p, index| %>
+    <li data-target="#myCarousel" data-slide-to="<%= index %>" class="<% if index == 0 %>active<% end %>"></li>
+    <% end %>
   </ol> 
-  -->
+  
 <div class="carousel-inner">
 
 <% @projects_for_home.each_with_index do |p, index| %>
@@ -29,9 +29,9 @@
 
 
 </div>
-<!-- Carousel nav 
+<!-- Carousel nav -->
   <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>-->
+  <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
 </div> 
 <!--	
 <div id="myCarousel" class="carousel slide">
