--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
             
             
             <%#= Refinery.extensions %>
-            <%= link_to 'Projects', refinery.projects_projects_path %>
-            <%= link_to 'home', refinery.root_path %>
+            <%#= link_to 'Projects', refinery.projects_projects_path %>
+            <%#= link_to 'home', refinery.root_path %>
             
             <%= yield %>
           </section>
