fixed app layout footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
               <li>Contact Us</li>
               <li>News</li>
               <li>Employment Opportunities</li>
-              <li>Bid Opportnities</li>
+              <li>Bid Opportunities</li>
             </ul>
           </div>
           <%= render '/refinery/footer' -%>
