--- a/app/views/refinery/pages/show.html.erb
+++ b/app/views/refinery/pages/show.html.erb
@@ -1,4 +1,13 @@
 <div class="row-fluid">
 <div class="span8" id="l2-main"><%= render '/refinery/content_page' %></div>
-<div class="span4">Sidebar<%#= render '/refinery/content_page' %></div>
+<div class="span4" id="sidebar">
+	
+	<div id="quotebox-l2">
+		<%= raw @testimonial.title %>
+		<%= raw @testimonial.testimonial %>
+	</div>
+</div>
+
+	<%#= render '/refinery/content_page' %>
+</div>
 </div>
