--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,35 +51,35 @@
           </div>
           <div class="span2">
             <ul>
-              <li>Why Wieser Brothers</li>
-              <li>Trust</li>
-              <li>Excellence</li>
-              <li>Partnership</li>
+              <li><%= link_to 'Why Wieser Brothers', '/why-wieser-brothers' %></li>
+              <li><%= link_to 'Trust', '/why-wieser-brothers#trust' %></li>
+              <li><%= link_to 'Excellence', '/why-wierser-brothers#excellence' %></li>
+              <li><%= link_to 'Partnership', '/why-wierser-brothers#partnership' %></li>
             </ul>
           </div>
           <div class="span2">
             <ul>
-              <li>Projects</li>
-              <li>Current Projects</li>
-              <li>Completed Projects</li>
-              <li>Archives</li>
+              <li><%= link_to 'Projects', projects_projects_path %></li>
+              <li><%= link_to 'Current Projects', projects_projects_path %></li>
+              <li><%= link_to 'Completed Projects', projects_projects_completed_path %></li>
+              <li><%= link_to 'Archives', projects_projects_archived_path %></li>
             </ul>
           </div>
           <div class="span2">
             <ul>
-              <li>Services</li>
-              <li>Design/Build</li>
-              <li>Commercial</li>
-              <li>Residential</li>
-              <li>Concrete</li>
+              <li><%= link_to 'Services', '/services' %></li>
+              <li><%= link_to 'Design/Build', '/services#design-build' %></li>
+              <li><%= link_to 'Commercial', '/services#commercial' %></li>
+              <li><%= link_to 'Residential', '/services#residential' %></li>
+              <li><%= link_to 'Concrete', '/services#concrete' %></li>
             </ul>
           </div>
           <div class="span2">
             <ul>
-              <li>Contact Us</li>
-              <li>News</li>
-              <li>Employment Opportunities</li>
-              <li>Bid Opportunities</li>
+              <li><%= link_to 'Contact Us', '/contact-us' %></li>
+              <li><%= link_to 'News', '/news' %></li>
+              <li><%= link_to 'Employment Opportunities', '/employment-opportunities' %></li>
+              <li><%= link_to 'Bid Opportunities', '/bid-opportunities' %></li>
             </ul>
           </div>
           <%= render '/refinery/footer' -%>
