footer links fixed

--- a/app/views/shared/_footer_links.html.erb
+++ b/app/views/shared/_footer_links.html.erb
@@ -20,10 +20,10 @@
           </div>
           <div class="span2">
             <ul>
-              <li><%= link_to 'Projects', projects_projects_path %></li>
-              <li><%= link_to 'Current Projects', projects_projects_path %></li>
-              <li><%= link_to 'Completed Projects', projects_projects_completed_path %></li>
-              <li><%= link_to 'Archives', projects_projects_archived_path %></li>
+              <li><%= link_to 'Projects', '/projects' %></li>
+              <li><%= link_to 'Current Projects', '/projects' %></li>
+              <li><%= link_to 'Completed Projects', '/projects_completed' %></li>
+              <li><%= link_to 'Archives', 'projects_archived' %></li>
             </ul>
           </div>
           <div class="span2">
