--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -29,6 +29,8 @@ $dark_gray:#636363;
 
  html, body {margin:0;padding:0;background-color:$light_gray;}
 
+ h1 {font-family:'Impact W15 2010';}
+
  //#home div > div[id] > div {width:940px;border:1px solid black;margin:0 auto;}
  #intro {
  	position:relative;
