--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -47,7 +47,7 @@
 <div class="row-fluid home-buckets" style="margin-top:-100px;position:relative;">
 	<div class="span12" style="padding:20px;">
 	<div class="span4">
-		<h1>Trust<br />Excellence<br />Partnership</h1>
+		<h1>Trust<br />Partnership<br />Excellence</h1>
 		<h3><i class="icon-chevron-right"></i> <%= link_to 'Why Wieser Brothers', '/why-wieser-brothers' %></h3>
 	</div>
 	<div class="span4">
